Link to function reference and news in docs site navbar

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -38,6 +38,8 @@ navbar:
   components:
     reference:
       text: Functions
+      href: reference/index.html
     news:
       text: News
+      href: news/index.html
 
